# crosswordle

./: .gitignore
contracts/: Scarb.toml  dojo_dev.toml  dojo_release.toml  indexer.db
contracts/manifests/dev/base/abis/contracts/: crosswordle-config_system-42e758f3.json  crosswordle-create_actions-10ee2987.json
contracts/manifests/dev/base/abis/models/: crosswordle-Letter-211c952b.json  crosswordle-LetterStatus-32845090.json
contracts/manifests/dev/base/contracts/: crosswordle-config_system-42e758f3.toml  crosswordle-create_actions-10ee2987.toml
contracts/manifests/dev/base/models/: crosswordle-Letter-211c952b.toml  crosswordle-LetterStatus-32845090.toml
contracts/overlays/dev/: actions.toml
contracts/src/: lib.cairo  store.cairo
contracts/src/components/: playable.cairo
contracts/src/models/: board.cairo  index.cairo  letter.cairo
contracts/src/systems/: actions.cairo  config_system.cairo  create.cairo
contracts/src/tests/: test_letter.cairo
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/src/manual_bindgen/: mod.rs
frontend/src/plugins/: constants.rs  cursor.rs  display.rs  game_states.rs  guess.rs  guess_letter.rs  hacky_claudy.rs  image_visualize.rs  mock_torii.rs  mod.rs  score.rs  set_color.rs  solution_verifier.rs  sounds.rs  switch_letter_status.rs  text_visualize.rs  visualize.rs
frontend/src/plugins/manual_bindgen/: mod.rs
frontend/src/ui/: mod.rs
