[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }
bevy_kira_audio = { version = "0.20.0", features = ["wav"] }
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Text",
] }
